Made changes to the home page. Will duplicate footer later. Will add grid images showing the kind of products they have.

--- a/aftatech-products.html
+++ b/aftatech-products.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Crysa - It Solution Template">
+    <meta name="description" content="Aftatech - IT Consultancy Company">
 
     <title>Aftatech-IT Solutions</title>
 
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/Aftatech.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
