--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Crysa - It Solution Template">
+    <meta name="description" content="Aftatech - IT Consultancy Company">
 
     <title>Aftatech-IT Solutions</title>
 
@@ -399,6 +399,146 @@
     </div>
     <!-- End Process -->
 
+    <div class="blog-area blog-grid mb-5 pt-5 mt-4 pb-5">
+        <div class="container">
+            <div class="blog-item-box">
+                <h2 class="text-center mb-4">Our Products</h2>
+                <div class="row all-products justify-content-center justify-content-md-between">
+                    <!-- Single Item -->
+                    <div class="col-xl-3 col-md-4 col-sm-6 single-item">
+                        <div class="blog-style-one">
+                            <div class="thumb">
+                                <a href="blog-single-with-sidebar.html"><img src="assets/products/laptops/c06545784.png" alt="Thumb"></a>
+                            </div>
+                            <div class="info">
+                                <p class="item-title">
+                                    <a href="blog-single-with-sidebar.html">HP Lemonade Dragon -- Blue Ice.</a>
+                                </p>
+                                <ul class="details-list">
+                                    <li>Items Left: 4</li>
+                                    <li>Price: Contact For Price</li>
+                                </ul>
+                            </div>
+                            <div class="author">
+                                <button class="product-contact-btn" type="submit"> Contact To Buy <i class="fa fa-paper-plane ms-1"></i></button>  
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-4 col-sm-6 single-item">
+                        <div class="blog-style-one">
+                            <div class="thumb">
+                                <a href="blog-single-with-sidebar.html"><img src="assets/products/laptops/c06545809.png" alt="Thumb"></a>
+                            </div>
+                            <div class="info">
+                                <p class="item-title">
+                                    <a href="blog-single-with-sidebar.html">HP Lemonade Dragon -- Blue Ice.</a>
+                                </p>
+                                <ul class="details-list">
+                                    <li>Items Left: 4</li>
+                                    <li>Price: Contact For Price</li>
+                                </ul>
+                            </div>
+                            <div class="author">
+                                <button class="product-contact-btn" type="submit"> Contact To Buy <i class="fa fa-paper-plane ms-1"></i></button>  
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-4 col-sm-6 single-item">
+                        <div class="blog-style-one">
+                            <div class="thumb">
+                                <a href="blog-single-with-sidebar.html"><img src="assets/products/laptops/c06565650.png" alt="Thumb"></a>
+                            </div>
+                            <div class="info">
+                                <p class="item-title">
+                                    <a href="blog-single-with-sidebar.html">HP Lemonade Dragon -- Blue Ice.</a>
+                                </p>
+                                <ul class="details-list">
+                                    <li>Items Left: 4</li>
+                                    <li>Price: Contact For Price</li>
+                                </ul>
+                            </div>
+                            <div class="author">
+                                <button class="product-contact-btn" type="submit"> Contact To Buy <i class="fa fa-paper-plane ms-1"></i></button>  
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-4 col-sm-6 single-item">
+                        <div class="blog-style-one">
+                            <div class="thumb">
+                                <a href="blog-single-with-sidebar.html"><img src="assets/products/laptops/c06586688.png" alt="Thumb"></a>
+                            </div>
+                            <div class="info">
+                                <p class="item-title">
+                                    <a href="blog-single-with-sidebar.html">HP Lemonade Dragon -- Blue Ice.</a>
+                                </p>
+                                <ul class="details-list">
+                                    <li>Items Left: 4</li>
+                                    <li>Price: Contact For Price</li>
+                                </ul>
+                            </div>
+                            <div class="author">
+                                <button class="product-contact-btn" type="submit"> Contact To Buy <i class="fa fa-paper-plane ms-1"></i></button>  
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-4 col-sm-6 single-item">
+                        <div class="blog-style-one">
+                            <div class="thumb">
+                                <a href="blog-single-with-sidebar.html"><img src="assets/products/laptops/c06612716.png" alt="Thumb"></a>
+                            </div>
+                            <div class="info">
+                                <p class="item-title">
+                                    <a href="blog-single-with-sidebar.html">HP Lemonade Dragon -- Blue Ice.</a>
+                                </p>
+                                <ul class="details-list">
+                                    <li>Items Left: 4</li>
+                                    <li>Price: Contact For Price</li>
+                                </ul>
+                            </div>
+                            <div class="author">
+                                <button class="product-contact-btn" type="submit"> Contact To Buy <i class="fa fa-paper-plane ms-1"></i></button>  
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-4 col-sm-6 single-item">
+                        <div class="blog-style-one">
+                            <div class="thumb">
+                                <a href="blog-single-with-sidebar.html"><img src="assets/products/laptops/c06622124.png" alt="Thumb"></a>
+                            </div>
+                            <div class="info">
+                                <p class="item-title">
+                                    <a href="blog-single-with-sidebar.html">HP Lemonade Dragon -- Blue Ice.</a>
+                                </p>
+                                <ul class="details-list">
+                                    <li>Items Left: 4</li>
+                                    <li>Price: Contact For Price</li>
+                                </ul>
+                            </div>
+                            <div class="author">
+                                <button class="product-contact-btn" type="submit"> Contact To Buy <i class="fa fa-paper-plane ms-1"></i></button>  
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Pagination -->
+            <div class="row">
+                <div class="col-md-12 pagi-area text-center">
+                    <nav aria-label="navigation">
+                        <!-- <ul class="pagination">
+                            <li class="page-item"><a class="page-link" href="blog-3-colum.html"><i class="fas fa-angle-double-left"></i></a></li>
+                            <li class="page-item active"><a class="page-link" href="blog-3-colum.html">1</a></li>
+                            <li class="page-item"><a class="page-link" href="blog-3-colum.html">2</a></li>
+                            <li class="page-item"><a class="page-link" href="blog-3-colum.html">3</a></li>
+                            <li class="page-item"><a class="page-link" href="blog-3-colum.html"><i class="fas fa-angle-double-right"></i></a></li> -->
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <!-- End Pagination -->
+        </div>
+    </div>
+
     <!-- Start Services 
     ============================================= -->
     <div class="services-area bg-gray default-padding bottom-less">
@@ -485,7 +625,8 @@
                     <div class="services-style-one col-xl-4 col-md-6">
                         <div class="item style-one-item active">
                             <i class="flaticon-data-security"></i>
-                            <p>We Offer Customer Service Support To Make Sure Clients Get Their Ultimate Satisfaction By Our Carefully Selected Sales Team And Troubleshooting Managers By Carefully Addressing Whatever Issues Brought To Them. </p>
+                            <p>We sell Laptops, Desktop PCs, Accessories, Screens, Laptop Keyboards, Printers, Modems and UPS. We also repair any of the aforementioned gadgets and devices with assured world-class quality and affordability.</p>
+                            <!-- <p>We Offer Customer Service Support To Make Sure Clients Get Their Ultimate Satisfaction By Our Carefully Selected Sales Team And Troubleshooting Managers By Carefully Addressing Whatever Issues Brought To Them. </p> -->
                             <div class="bottom">
                                 <h4><a href="#">Sales And Repair Services</a></h4>
                                 <a href="#"><i class="fas fa-arrow-right"></i></a>
@@ -672,7 +813,7 @@
                             </div>
                             <div class="info">
                                 <h5>Call for Emergency Assistance</h5>
-                                <a href="tel:+234**********">+234*********</a>
+                                <a href="tel:+2349056119667">+234 9056119667</a>
                             </div>
                         </li>
                     </ul>
@@ -696,10 +837,10 @@
                             </p>
                             <ul class="social">
                                 <li>
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.facebook.com/AFTATECH/"><i class="fab fa-facebook-f"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/AFTATECHIT?t=lt2ytEFJn3D-vAmO2gcRrQ&s=09"><i class="fab fa-twitter"></i></a>
                                 </li>
                                 <li>
                                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -743,7 +884,7 @@
                             <div class="address">
                                 <ul>
                                     <li>
-                                        31 Johnson Street, Mayon Estate, Ikoyi Valley, Ilorin, Kwara State
+                                        Our Address - 2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State
                                     </li>
                                     <li>
                                         <div class="icon">
@@ -751,7 +892,8 @@
                                         </div>
                                         <div class="content">
                                             <strong>Opening Hours:</strong>
-                                            9:00 AM – 9:00 PM
+                                            Monday - Friday:    8:00 AM – 6:00 PM
+                                            Saturday:    10:00 AM – 4:00 PM
                                         </div>
                                     </li>
                                     <li>
@@ -760,7 +902,7 @@
                                         </div>
                                         <div class="content">
                                             <strong>Phone:</strong>
-                                            <a href="tel:2151234567">+234 19016725</a>
+                                            <a href="tel:2151234567">+234 8030947468</a>
                                         </div>
                                     </li>
                                 </ul>
