--- a/aftatech-solutions.html
+++ b/aftatech-solutions.html
@@ -75,7 +75,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
+                                    <i class="fab fa-instagram"></i>
                                 </a>
                             </li>
                             
@@ -594,11 +594,11 @@
 
      <!-- Start Footer 
     ============================================= -->
-    <footer class="bg-dark text-light">
-        <div class="container">
-            <div class="f-items default-padding">
+    <footer id="footer" class="bg-dark text-light">
+        <div class="container-fluid container-lg">
+            <div class="f-items">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 item">
+                    <div class="col-md-4 item">
                         <div class="f-item about">
                             <img class="logo" src="assets/images/Aftatech.png" alt="Logo">
                             <p>
@@ -606,54 +606,54 @@
                             </p>
                             <ul class="social">
                                 <li>
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.facebook.com/AFTATECH/"><i class="fab fa-facebook-f"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/AFTATECHIT?t=lt2ytEFJn3D-vAmO2gcRrQ&s=09"><i class="fab fa-twitter"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
                                 </li>
                                
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 item">
+                    <div class="col-md-4 item">
                         <div class="f-item link">
                             <h4 class="widget-title">Solutions</h4>
                             <ul>
                                 <li>
-                                    <a href="services-details.html"><i class="fas fa-angle-right"></i>Repairs </a>
+                                    <a href="device-repairs.html#"><i class="fas fa-angle-right"></i>Repairs </a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html"><i class="fas fa-angle-right"></i>Software Devleopment</a>
+                                    <a href="software-development.html#"><i class="fas fa-angle-right"></i>Software Devleopment</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html"><i class="fas fa-angle-right"></i>Business Center</a>
+                                    <a href="business-center.html#"><i class="fas fa-angle-right"></i>Business Center</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html"><i class="fas fa-angle-right"></i> IT Consulting</a>
+                                    <a href="it-consulting.html#"><i class="fas fa-angle-right"></i> IT Consulting</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html"><i class="fas fa-angle-right"></i>Data Hub And SMS Site</a>
+                                    <a href="data-and-sms-hub.html"><i class="fas fa-angle-right"></i>Data Hub And SMS Site</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html"><i class="fas fa-angle-right"></i>Sales Of Gadgets & Accessories</a>
+                                    <a href="sales-gadgets.html"><i class="fas fa-angle-right"></i>Sales Of Gadgets & Accessories</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html"><i class="fas fa-angle-right"></i>Multimedia Rentals</a>
+                                    <a href="multimedia-rentals.html"><i class="fas fa-angle-right"></i>Multimedia Rentals</a>
                                 </li>
 
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 item">
+                    <div class="col-md-4 item">
                         <div class="f-item contact-widget">
                             <h4 class="widget-title">Contact Info</h4>
                             <div class="address">
                                 <ul>
                                     <li>
-                                        31 Johnson Street, Mayon Estate, Ikoyi Valley, Ilorin, Kwara State
+                                        Our Address - 2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State
                                     </li>
                                     <li>
                                         <div class="icon">
@@ -661,7 +661,8 @@
                                         </div>
                                         <div class="content">
                                             <strong>Opening Hours:</strong>
-                                            9:00 AM – 9:00 PM
+                                            Monday - Friday:    8:00 AM – 6:00 PM
+                                            Saturday:    10:00 AM – 4:00 PM
                                         </div>
                                     </li>
                                     <li>
@@ -670,7 +671,7 @@
                                         </div>
                                         <div class="content">
                                             <strong>Phone:</strong>
-                                            <a href="tel:2151234567">+234 19016725</a>
+                                            <a href="tel:2151234567">+234 8030947468</a>
                                         </div>
                                     </li>
                                 </ul>
