I have updated the remaining pages and styled the products page.

--- a/data-hub-and-sms-site.html
+++ b/data-hub-and-sms-site.html
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <h1>Data Hub and SMS Site</h1>
+                    <h1>Data and SMS Services</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
