--- a/footer.html
+++ b/footer.html
@@ -27,22 +27,22 @@
                         <h4 class="widget-title">Solutions</h4>
                         <ul>
                             <li>
-                                <a href="device-repairs.html#"><i class="fas fa-angle-right"></i>Repairs </a>
+                                <a href="device-repairs.html#"><i class="fas fa-angle-right"></i>Device Repairs</a>
                             </li>
                             <li>
                                 <a href="software-development.html#"><i class="fas fa-angle-right"></i>Software Devleopment</a>
                             </li>
                             <li>
-                                <a href="business-center.html#"><i class="fas fa-angle-right"></i>Business Center</a>
+                                <a href="data-hub-and-sms-site.html"><i class="fas fa-angle-right"></i>Data Recharge Services</a>
                             </li>
                             <li>
                                 <a href="it-consulting.html#"><i class="fas fa-angle-right"></i> IT Consulting</a>
                             </li>
                             <li>
-                                <a href="data-and-sms-hub.html"><i class="fas fa-angle-right"></i>Data Hub And SMS Site</a>
+                                <a href="data-hub-and-sms-site.html"><i class="fas fa-angle-right"></i>Bulk SMS Services</a>
                             </li>
                             <li>
-                                <a href="sales-gadgets.html"><i class="fas fa-angle-right"></i>Sales Of Gadgets & Accessories</a>
+                                <a href="gadgets-sales.html"><i class="fas fa-angle-right"></i>Sales Of Gadgets & Accessories</a>
                             </li>
                             <li>
                                 <a href="multimedia-rentals.html"><i class="fas fa-angle-right"></i>Multimedia Rentals</a>
