--- a/header.html
+++ b/header.html
@@ -66,12 +66,12 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Products</a>
+                                <a href="aftatech-products.html" class="dropdown-toggle" data-toggle="dropdown">Our Products</a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="aftatech-products.html">Laptops and Phones</a></li>
-                                    <li><a href="aftatech-products.html">Gadgets</a></li>
-                                    <li><a href="aftatech-products.html">Device Accessories</a></li>
-                                    <li><a href="aftatech-products.html">Professional Equipment</a></li>
+                                    <li><a href="aftatech-products.html#laptops">Laptops and Desktops</a></li>
+                                    <li><a href="aftatech-products.html#phones">Phones</a></li>
+                                    <li><a href="aftatech-products.html#gadgets">Gadgets and Accessories</a></li>
+                                    <li><a href="aftatech-products.html#equipment">Professional Equipment</a></li>
                                 </ul>
                             </li>
                             <li><a href="contact-us.html">contact us</a></li>
