I have updated the header to point to the about-us section on the home page.

--- a/header.html
+++ b/header.html
@@ -52,7 +52,7 @@
                                 <a href="index.html#" class="active" >Home</a>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="">About Us</a>
+                                <a href="index.html#about-us" class="">About Us</a>
                             </li>
                             <li class="dropdown">
                                 <a href="aftatech-solutions.html#" class="dropdown-toggle" data-toggle="dropdown" >Services</a>
