--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <!-- Start About 
     ============================================= -->
-    <div class="about-area default-padding-top pb-md-110 pb-xs-45 overflow-hidden">
+    <div id="about-us" class="about-area default-padding-top pb-md-110 pb-xs-45 overflow-hidden">
         <div class="container">
             <div class="about-style-one-box">
                 <div class="row">
