--- a/footer.html
+++ b/footer.html
@@ -75,7 +75,7 @@
                                     </div>
                                     <div class="content">
                                         <strong>Phone:</strong>
-                                        <a href="tel:2348030947468">+234 8030947468</a>
+                                        <a href="tel:2348030947468">+234 8030947468</a><br>
                                         <a href="tel:2349056119667">+234 9056119667</a>
                                     </div>
                                 </li>
