I have changed the aftatech email across all pages.

--- a/contact-us.html
+++ b/contact-us.html
@@ -151,7 +151,7 @@
                             <p>
                                 You can send a message at any time and get a response within 24 hours
                             </p>
-                            <a href="mailto:info@crysta.com.com">info@crysta.com</a>
+                            <h4><a href="mailto:aftatechit@gmail.com">aftatechit@gmail.com</a></h4>
                         </div>
                     </div>
                     <!-- End Single Item -->
