--- a/gadgets-sales.html
+++ b/gadgets-sales.html
@@ -269,7 +269,7 @@
                             <div class="content">
                                 <i class="fas fa-phone-alt"></i>
                                 <h2>+(234) 8030947468</h2>
-                                <h4><a href="mailto:info@crysta.com">info@aftatech.it</a></h4>
+                                <h4><a href="mailto:aftatechit@gmail.com">aftatechit@gmail.com</a></h4>
                                 <a class="btn mt-30 btn-sm btn-theme" href="contact-us.html">Contact Us</a>
                             </div>
                         </div>
