--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 </div>
                                 <div class="info">
                                     <p>Have any Questions?</p>
-                                    <h5><a href="mailto:info@aftatech.com">info@aftatech.com</a></h5>
+                                    <h5><a href="mailto:aftatechit@gmail.com">aftatechit@gmail.com</a></h5>
                                 </div>
                             </div>
                             <!-- <a href="https://www.youtube.com/watch?v=owhuBrGIOsE" class="popup-youtube video-play-button with-text"> -->
