I have completed changing the text for the faq section and added appropriate references.

--- a/aftatech-solutions.html
+++ b/aftatech-solutions.html
@@ -424,7 +424,7 @@
                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
                               <div class="accordion-body">
                                     <p>
-                                        Jennings appetite disposed me an at subjects an. To no indulgence diminution so discovered mr apartments. Are off under folly death wrote cause her way spite. Plan upon yet way get cold spot its week. Almost do am or limits hearts. Resolve parties but why she shewing. She sang know now minute exact dear open to reaching out.
+                                        Our Institute Training covers a variety of topics for all ages. Taking the numerous factors involved into consideration, it is best for prospective students to call us at <a href="tel:+2348030947468">+2348030947468</a>, send us an email at <a href="mail:aftatechit@gmail.com">aftatechit@gmail.com</a> or visit the premises for more enquiries at 2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State.
                                     </p>
                               </div>
                            </div>
@@ -466,7 +466,7 @@
                             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
                                  <div class="accordion-body">
                                      <p>
-                                         Jennings appetite disposed me an at subjects an. To no indulgence diminution so discovered mr apartments. Are off under folly death wrote cause her way spite. Plan upon yet way get cold spot its week. Almost do am or limits hearts. Resolve parties but why she shewing. She sang know now minute exact dear open to reaching out.
+                                         We rent out a range of multimedia devices for any kind of entertainment or multimedia production. This includes high-quality video cameras, audio recorders, projectors, projector screens, webcams, sound systems and equipment. All our equipment frequently undergo maintainance and come in the appropriate packaging for efficient transportation
                                      </p>
                                  </div>
                             </div>
