--- a/header.html
+++ b/header.html
@@ -66,6 +66,9 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
+                                <a href="gallery.html" class="">Gallery</a>
+                            </li>
+                            <li class="dropdown">
                                 <a href="aftatech-products.html" class="dropdown-toggle" data-toggle="dropdown">Our Products</a>
                                 <ul class="dropdown-menu">
                                     <li><a href="aftatech-products.html#laptops">Laptops and Desktops</a></li>
